[0.60] Disable V8 globally; turn it on only for Desktop builds (#5185)
* Disable V8 globally. Turn it on specifically for Desktop builds

* Change files

* Try limiting build parallelism to avoid heap errors

* (EXPERIMENT) Try without precompiled headers

* Revert "(EXPERIMENT) Try without precompiled headers"

This reverts commit 4e90a9be84e6e1a536b9b69650cbeb672548ccab.

* parallelism 1

* increase timeouts

Co-authored-by: tudorm <tudorm@microsoft.com>

--- a/.ado/templates/build-rnw.yml
+++ b/.ado/templates/build-rnw.yml
@@ -51,6 +51,8 @@ steps:
         /p:PlatformToolset=${{parameters.platformToolset}}
         ${{parameters.msbuildArguments}}
         /p:BaseIntDir=$(BaseIntDir)
+        /maxCpuCount:1
+        /p:CL_MPCount=1
 
   - task: PublishBuildArtifacts@1
     condition:  succeededOrFailed()
