--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -68,7 +68,7 @@ jobs:
           UseRNFork: false
     pool:
       vmImage: $(VmImage)
-    timeoutInMinutes: 60
+    timeoutInMinutes: 90
     cancelTimeoutInMinutes: 5
 
     steps:
@@ -106,7 +106,7 @@ jobs:
           UseRNFork: true
     pool:
       vmImage: $(VmImage)
-    timeoutInMinutes: 60
+    timeoutInMinutes: 90
     cancelTimeoutInMinutes: 5
 
     steps:
@@ -226,7 +226,7 @@ jobs:
 
     pool:
       vmImage: $(VmImage)
-    timeoutInMinutes: 60 # how long to run the job before automatically cancelling
+    timeoutInMinutes: 90 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
 
     variables:
@@ -248,6 +248,7 @@ jobs:
           msbuildArguments:
             /p:RNW_PKG_VERSION_STR="Private Build"
             /p:RNW_PKG_VERSION="1000,0,0,0"
+            /p:USE_V8=true
 
       - task: CmdLine@2
         displayName: Build react-native-win32 RNTester bundle
