--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -262,8 +262,7 @@
     <ClInclude Include="..\ReactUWP\Views\CheckboxViewManager.h" />
     <ClInclude Include="..\ReactUWP\Views\DatePickerViewManager.h" />
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationPeer.h" />
-    <ClInclude Include="..\ReactUWP\Views\RangeAutomationPeer.h" />
-    <ClInclude Include="..\ReactUWP\Views\ValueAutomationPeer.h" />
+    <ClInclude Include="..\ReactUWP\Views\DynamicValueProvider.h" />
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationProperties.h" />
     <ClInclude Include="..\ReactUWP\Views\ExpressionAnimationStore.h" />
     <ClInclude Include="..\ReactUWP\Views\FlyoutViewManager.h" />
@@ -447,8 +446,7 @@
     <ClCompile Include="..\ReactUWP\Views\ControlViewManager.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DatePickerViewManager.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationPeer.cpp" />
-    <ClCompile Include="..\ReactUWP\Views\RangeAutomationPeer.cpp" />
-    <ClCompile Include="..\ReactUWP\Views\ValueAutomationPeer.cpp" />
+    <ClCompile Include="..\ReactUWP\Views\DynamicValueProvider.cpp" />
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationProperties.cpp" />
     <ClCompile Include="..\ReactUWP\Views\ExpressionAnimationStore.cpp" />
     <ClCompile Include="..\ReactUWP\Views\FlyoutViewManager.cpp" />
@@ -579,7 +577,6 @@
     <Midl Include="..\ReactUWP\Views\cppwinrt\AccessibilityAction.idl" />
     <Midl Include="..\ReactUWP\Views\cppwinrt\BorderEffect.idl" />
     <Midl Include="..\ReactUWP\Views\cppwinrt\DynamicAutomationPeer.idl" />
-    <!-- <Midl Include="..\ReactUWP\Views\cppwinrt\RangeAutomationPeer.idl" /> -->
     <Midl Include="..\ReactUWP\Views\cppwinrt\ViewPanel.idl" />
     <Midl Include="IReactNonAbiValue.idl" />
     <Midl Include="IJSValueReader.idl" />
