--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
@@ -164,10 +164,7 @@
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationPeer.cpp">
       <Filter>Views</Filter>
     </ClCompile>
-    <ClCompile Include="..\ReactUWP\Views\RangeAutomationPeer.cpp">
-      <Filter>Views</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ReactUWP\Views\ValueAutomationPeer.cpp">
+    <ClCompile Include="..\ReactUWP\Views\DynamicValueProvider.cpp">
       <Filter>Views</Filter>
     </ClCompile>
     <ClCompile Include="..\ReactUWP\Views\DynamicAutomationProperties.cpp">
@@ -512,10 +509,7 @@
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationPeer.h">
       <Filter>Views</Filter>
     </ClInclude>
-    <ClInclude Include="..\ReactUWP\Views\RangeAutomationPeer.h">
-      <Filter>Views</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ReactUWP\Views\ValueAutomationPeer.h">
+    <ClInclude Include="..\ReactUWP\Views\DynamicValueProvider.h">
       <Filter>Views</Filter>
     </ClInclude>
     <ClInclude Include="..\ReactUWP\Views\DynamicAutomationProperties.h">
@@ -705,9 +699,6 @@
     <Midl Include="..\ReactUWP\Views\cppwinrt\DynamicAutomationPeer.idl">
       <Filter>Views\cppwinrt</Filter>
     </Midl>
-    <!-- <Midl Include="..\ReactUWP\Views\cppwinrt\RangeAutomationPeer.idl">
-      <Filter>Views\cppwinrt</Filter>
-    </Midl> -->
     <Midl Include="..\ReactUWP\Views\cppwinrt\ViewPanel.idl">
       <Filter>Views\cppwinrt</Filter>
     </Midl>
