--- a/.ado/templates/yarn-install.yml
+++ b/.ado/templates/yarn-install.yml
@@ -1,5 +1,6 @@
 steps:
+
   - task: CmdLine@2
-    displayName: Yarn install
+    displayName: midgard-yarn (faster yarn install)
     inputs:
-      script: yarn --frozen-lockfile --network-timeout 100000 || yarn --frozen-lockfile --network-timeout 100000 || yarn --frozen-lockfile --network-timeout 150000 || yarn --frozen-lockfile --network-timeout 150000 --network-concurrency 1 || yarn --frozen-lockfile --network-timeout 150000 --network-concurrency 1
+      script: npx midgard-yarn@1.23.5 --network-concurrency 20
