Don't lint target folder and don't flow check node_modules packages

--- a/vnext/.eslintignore
+++ b/vnext/.eslintignore
@@ -1,11 +1,12 @@
+**/node_modules
 /dist
 /flow
+/index.*
+/jest
 /lib
 /Libraries
-**/node_modules
 /packages
 /ReactCopies
 /RNTester
-/index.*
 /RNTester.*
-/jest
+/target
