Create Scripts for the Release Process
Fixes #4863

These are some quick and dirty scripts which update the various aspects of our repo to promote versions from canary to preview, preview to latest, and latest to legacy (old dist-tag). I've tested bits and pieces of this but still need to test it end-to-end.

As a note, this script has a lot of dependencies. The ones chosesn are meant to match dev dependencies already in the monorepo to not bloat things to much.

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -10,7 +10,14 @@
     "directory": "packages/scripts"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
     "clang-format": "1.2.4",
-    "just-scripts": "^0.36.1"
+    "find-up": "^4.1.0",
+    "glob": "^7.1.6",
+    "js-yaml": "^3.14.0",
+    "just-scripts": "^0.36.1",
+    "lodash": "^4.17.15",
+    "simplegit": "^1.0.2",
+    "yargs": "^15.3.1"
   }
 }
