--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -2,6 +2,7 @@ name: 0.0.$(Date:yyMM.d)$(Rev:rrr)
 
 variables:
   - template: variables/msbuild.yml
+  - template: variables/release.yml
   - template: variables/vs2019.yml
 
 schedules:
