--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -9,6 +9,7 @@ pr:
 
 variables:
   - template: variables/msbuild.yml
+  - template: variables/release.yml
   - template: variables/vs2019.yml
   - name: reactNativeVersion
     value: 0.62.2
