Unify DevSupportManager and WebSocketJSExecutor (#5231)
* Unify DevSupportManager and WebSocketJSExecutor

* minor fix

* Change files

* Remove dead WebSocketJSExecutor tests

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -308,7 +308,7 @@ jobs:
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
 
     variables:
-      Desktop.IntegrationTests.Filter: (FullyQualifiedName!~WebSocketJSExecutorIntegrationTest)&(FullyQualifiedName!~WebSocket)
+      Desktop.IntegrationTests.Filter: (FullyQualifiedName!~WebSocket)
 
     steps:
       - checkout: self
