--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -70,7 +70,7 @@ steps:
   - task: CmdLine@2
     displayName: Init new project
     inputs:
-      script: react-native init testcli --version ${{ parameters.version }}
+      script: react-native init testcli --npm --version ${{ parameters.version }}
       workingDirectory: $(Agent.BuildDirectory)
 
   - task: CmdLine@2
