--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="..\include\ReactUWP\Views\ShadowNodeBase.h" />
     <ClInclude Include="..\include\ReactUWP\Views\ViewManagerBase.h" />
     <ClInclude Include="..\ReactUWP\Base\CoreNativeModules.h" />
+    <ClInclude Include="..\ReactWindowsCore\Executors\WebSocketJSExecutor.h" />
     <ClInclude Include="..\ReactUWP\Modules\AlertModuleUwp.h" />
     <ClInclude Include="..\ReactUWP\Modules\Animated\AdditionAnimatedNode.h" />
     <ClInclude Include="..\ReactUWP\Modules\Animated\AnimatedNode.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="..\ReactUwp\Modules\AppearanceModule.h" />
     <ClInclude Include="..\ReactUWP\Modules\AppThemeModuleUwp.h" />
     <ClInclude Include="..\ReactUWP\Modules\DeviceInfoModule.h" />
+    <ClInclude Include="..\ReactWindowsCore\Modules\DevSupportManager.h" />
     <ClInclude Include="..\ReactUWP\Modules\I18nModule.h" />
     <ClInclude Include="..\ReactUWP\Modules\ImageViewManagerModule.h" />
     <ClInclude Include="..\ReactUWP\Modules\LinkingManagerModule.h" />
@@ -356,6 +358,8 @@
     <ClCompile Include="..\ReactUWP\Base\CoreUIManagers.cpp" />
     <ClCompile Include="..\ReactUWP\CxxReactUWP\JSBigString.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\AlertModuleUwp.cpp" />
+    <ClCompile Include="..\ReactWindowsCore\Executors\WebSocketJSExecutorFactory.cpp" />
+    <ClCompile Include="..\ReactWindowsCore\Executors\WebSocketJSExecutor.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\Animated\AdditionAnimatedNode.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\Animated\AnimatedNode.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\Animated\AnimationDriver.cpp" />
@@ -380,6 +384,7 @@
     <ClCompile Include="..\ReactUwp\Modules\AppearanceModule.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\AppThemeModuleUwp.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\DeviceInfoModule.cpp" />
+    <ClCompile Include="..\ReactWindowsCore\DevSupportManager.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\I18nModule.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\ImageViewManagerModule.cpp" />
     <ClCompile Include="..\ReactUWP\Modules\LinkingManagerModule.cpp" />
