--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -303,6 +303,7 @@ jobs:
           msbuildArguments:
             /p:RNW_PKG_VERSION_STR="Private Build"
             /p:RNW_PKG_VERSION="1000,0,0,0"
+            /p:USE_V8=true
 
       - task: CmdLine@2
         displayName: Build react-native-win32 RNTester bundle
