--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -94,6 +94,7 @@ jobs:
           msbuildArguments:
             /p:RNW_PKG_VERSION_STR="$(RNW_PKG_VERSION_STR)"
             /p:RNW_PKG_VERSION="$(RNW_PKG_VERSION)"
+            /p:USE_V8=true
 
       - template: templates/publish-build-artifacts-for-nuget.yml
         parameters:
@@ -105,6 +106,7 @@ jobs:
   - job: RnwNativeBuildUniversal
     displayName: Build Universal
     dependsOn: RnwNpmPublish
+    timeoutInMinutes: 90
     strategy:
       matrix:
         X64Debug:
