--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -159,7 +159,7 @@ jobs:
     strategy:
       matrix: # Why we only build some flavors: https://github.com/microsoft/react-native-windows/issues/4308
         X86:
-          BuildConfiguration: WinUI3
+          BuildConfiguration: Debug
           BuildPlatform: x86
     pool:
       vmImage: $(VmImage)
@@ -196,6 +196,7 @@ jobs:
             /p:PlatformToolset=$(MSBuildPlatformToolset)
             /p:BaseIntDir=$(BaseIntDir)
             /p:AppxPackageSigningEnabled=false
+            /p:UseWinUI3=true
 
 
   - job: RNWUniversalOtherProjectsPR
